<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/personal_details_title"
        android:layout_width="133dp"
        android:layout_height="58dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/title_description"
        android:text="@string/personal_details"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/name_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:contentDescription="name_title"
        android:text="Name: "
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/name_title_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/personal_details_title"
        tools:visibility="visible" />

    <EditText
        android:id="@+id/name_title_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:ems="10"
        android:hint="Enter Name"
        android:inputType="textPersonName"
        android:visibility="visible"
        app:layout_constraintBaseline_toBaselineOf="@+id/name_title"
        app:layout_constraintStart_toEndOf="@+id/name_title"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/address_title_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/address_title"
        android:text="@string/address"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_title"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/phone_number_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/phone_number_content"
        android:text="@string/phone"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="@+id/address_title_view"
        app:layout_constraintTop_toBottomOf="@+id/address_title_view"
        tools:visibility="visible" />

    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:ems="10"
        android:hint="@string/enter_phone"
        android:inputType="phone"
        app:layout_constraintStart_toStartOf="@+id/postal_address_input"
        app:layout_constraintTop_toBottomOf="@+id/postal_address_input" />

    <TextView
        android:id="@+id/email_input_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/email_content"
        android:text="@string/e_mail"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="@+id/phone_number_title"
        app:layout_constraintTop_toBottomOf="@+id/phone_number_title"
        tools:visibility="visible" />

    <EditText
        android:id="@+id/email_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/email_content"
        android:ems="10"
        android:hint="@string/enter_email"
        android:inputType="textEmailAddress"
        android:visibility="visible"
        app:layout_constraintBaseline_toBaselineOf="@+id/email_input_title"
        app:layout_constraintStart_toStartOf="@+id/editTextPhone"
        tools:visibility="visible" />

    <Button
        android:id="@+id/submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginLeft="160dp"
        android:layout_marginEnd="160dp"
        android:layout_marginRight="160dp"
        android:contentDescription="@string/button_content"
        android:text="@string/submit"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="visible"
        android:onClick="sendData"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_input"
        tools:visibility="visible" />

    <EditText
        android:id="@+id/postal_address_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="postal_address_content"
        android:ems="10"
        android:gravity="start|top"
        android:hint="Enter Address"
        android:inputType="textMultiLine"
        android:visibility="visible"
        app:layout_constraintBaseline_toBaselineOf="@+id/address_title_view"
        app:layout_constraintStart_toStartOf="@+id/name_title_view"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>